[Android] Refactor classes for reading raw properties into common IRawProperties interface. Obtain fitbit client id from endpoint in FitbitAuthorizationAcitivty

--- a/SmartAlarmAndroid/app/src/main/res/layout/activity_fitbit_authorization.xml
+++ b/SmartAlarmAndroid/app/src/main/res/layout/activity_fitbit_authorization.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.smart_alarm.pawl.smartalarmandroid.FitbitAuthorization">
+    tools:context="com.smart_alarm.pawl.smartalarmandroid.auth.FitbitAuthorizationActivity">
 
     <!-- Login progress -->
     <Button
